# crossword-construction

./: .eslintrc  .gitignore  .prettierrc  991.884c0e9990b417341386.js  991.dfbf236a59a12a6b3ed4.js  Cargo.toml  bundle.js  bundle.js.map  index.html  main.21d880ad9fed70b97083.js  main.49c42e907a8766513dd9.css  main.a9a346fd3c7de1f8a95f.css  main.abb7c8ff4321e518fe0f.css  main.css  main.css.map  main.e3298019f99e36fdd91f.js  main.e8f0c2baed376aa63d41.js  package-lock.json  package.json  reset.css  rollup.config.js  tsconfig.json  webpack.config.js  worker.js
.github/workflows/: pages.yml
app/: bootstrap.ts  package-lock.json  package.json  server.js  tsconfig.json  types.ts  webpack.config.js  worker.ts
app/components/: App.svelte  Cell.svelte  Grid.svelte  GridEditor.svelte  GridStatistics.svelte  Solver.svelte
app/crossword/: Cell.svelte  Grid.svelte  grid.ts  index.ts  types.ts
app/font/: fontello.eot  icons.eot
app/src/: worker.js
app/style/: _icons.scss  _theme.scss  global.scss  variables.scss
public/: index.html
solver/: Cargo.toml  Cargo.toml.d.ts
solver/lib/: Cargo.toml
solver/lib/src/: lib.rs  var.rs
solver/src/: constraint.rs  lib.rs  search.rs  state.rs  util.rs  var.rs
solver/wasm/: Cargo.toml
solver/wasm/src/: lib.rs
src/: App.svelte  Cell.svelte  Crossword.svelte  Crossword.ts  Worker.ts  main.ts  types.ts
src/app/: crossword.ts  index.ts  types.d.ts  types.ts  worker.js  worker.ts
src/components/: App.svelte  Cell.svelte  Grid.svelte  Solver.svelte
src/solver/: Cargo.toml  (+1 more)
static/: index.html
style/: global.scss
(+12 files in other folders)
